# legend-cli

./: .gitignore  README.md  pyproject.toml
docs/: SNOWFLAKE_AUTH_TROUBLESHOOTING.md
legend_cli/: __init__.py  claude_client.py  config.py  doc_generator.py  engine_client.py  main.py  models.py  sdlc_client.py  snowflake_client.py
legend_cli/analysis/: __init__.py  constraint_analyzer.py  derived_analyzer.py  document_relationship_analyzer.py  enum_detector.py  erd_analyzer.py  hierarchy_detector.py  models.py  relationship_analyzer.py  relationship_merger.py  schema_analyzer.py
legend_cli/commands/: __init__.py  create.py  mcp.py  model.py  project.py  workspace.py
legend_cli/database/: __init__.py  base.py  duckdb.py  models.py  relationship.py  snowflake.py  type_mappers.py
legend_cli/logging/: __init__.py  cli_db.py  cli_service.py
legend_cli/mcp/: __init__.py  context.py  errors.py  server.py
legend_cli/mcp/logging/: __init__.py  db.py  decorators.py  service.py
legend_cli/parsers/: __init__.py  base.py  json_parser.py  pdf_parser.py  sql_parser.py  url_parser.py
legend_cli/prompts/: __init__.py  constraint_templates.py  derived_templates.py  doc_templates.py  enum_templates.py  erd_templates.py  examples.py  hierarchy_templates.py  templates.py
legend_cli/pure/: __init__.py  connections.py  enhanced_generator.py  generator.py
legend_cli/tests/: __init__.py
tests/: conftest.py
tests/mcp/: test_code_error_handling.py  test_context.py  test_integration.py  test_model_generation.py  test_push_artifacts.py  test_store_parsing.py
(+13 files in other folders)
