[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legend-cli"
version = "0.1.0"
description = "CLI tool for creating Legend artifacts using natural language prompts"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "anthropic>=0.18.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
snowflake = [
    "snowflake-connector-python>=3.0.0",
]
duckdb = [
    "duckdb>=0.9.0",
]
mcp = [
    "mcp>=1.0.0",
]
all = [
    "snowflake-connector-python>=3.0.0",
    "duckdb>=0.9.0",
    "mcp>=1.0.0",
]

[project.scripts]
legend-cli = "legend_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["legend_cli*"]
